kustomize/overlays/stg/route.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-application-name-here
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - api-stg-your-application-name-here.via.com.br
      secretName: via-tls
  rules:
    - host: api-stg-your-application-name-here.via.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: your-application-name-here
                port:
                  number: 80
